main/css/main.css
@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap');

html {
    -webkit-box-sizing: border-box;
            box-sizing: border-box;
    font-family: 'Open Sans', sans-serif;
    color: black;
    margin: 0;
    padding: 0;
    background-color: #7fc3a1ff;
    scroll-behavior: smooth;
}
* {
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
}
*, *:before, *:after {
    -webkit-box-sizing: inherit;
            box-sizing: inherit;
}
body {
    width: 100vw;
    max-width: 1000px;
    margin: 0 auto;
    padding: 0;
    background-color: white;
}
.header {
    width: 100%;
    height: 110px;
    margin: 0;
    padding: 20px;
    background: #7fc3a1ff;
    display: flex;
    justify-content: space-between;
    align-items: center;
}
.header__title {/*screen-readers-accessible, visually hidden */
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0, 0, 0, 0);
    white-space: nowrap; 
    border: 0;
}
.logo {
    width: auto;
    height: 70px;
}
@media screen and (max-width: 250px) {
    .logo {
        height: 20vw;
    }
}
.nav {
    height: 70px;
    width: auto;
    margin: 0;
    padding: 0;
    display: flex;
    flex-flow: column;
    justify-content: space-between;
    align-items: center;
    position: relative;
}
.menu {
    display: none;
}
.menu-open {
    display: flex;
    flex-flow: column;
    align-items: flex-end;
    width: 120px;
    margin: 0;
    padding: 0;
    position: absolute;
    left: -125px;
    top: 0;
    background-color: #ffffff;
    border-radius: 5px;
}
.menu__item, .menu__item:visited, .menu__item:active {
    text-decoration: none;
    padding: 10px;
    color: black;
}
.menu__item:hover {
    color: #d40000;
}
.menu-button {
    background: none;
    border: none;
    text-decoration: none;
    margin: 0;
    padding: 0;
    color: #ffffff00;
    cursor: pointer;
}
.menu-img {
    height: 30px;
    width: auto;
}
.language {
    margin: 0;
    padding: 0;
    font-weight: bold;
}
.language__button {
    background: none;
    border: none;
    text-decoration: none;
    cursor: pointer;
    color: #000000;
    margin: 0;
    padding: 0;
    text-decoration: none;
    font-size: 1rem;
}
.inactive {
    color: #ffffff8c;
    cursor: default;
}
.main {
    width: 100%;
    padding: 0px;
}
.banner-uskpoland {
    display: block;
    max-width: 100%;
    width: 100vw;
    height: calc(100vw * 0.53);
    margin: 0 auto;
    background-image: url(../images/2023graphic/2023FestivalBanner.jpg);
    background-repeat: no-repeat;
    background-position: top center;
    background-clip: border-box;
    background-size: contain;
}
@media screen and (min-width: 1000px) {
    .banner-uskpoland {
    height: 530px; /*adjust when changing picture*/
    }
}
.banner {
    display: block;
    max-width: 100%;
    width: 100vw;
    height: 100vw;
    margin: 0 auto;
    background-image: url(../images/2022/square_banner.jpg);
    background-repeat: no-repeat;
    background-position: center;
    background-clip: border-box;
    background-size: contain;
}
@media screen and (min-width: 520px) {
    .banner {
    display: block;
    max-width: 100%;
    width: 100vw;
    height: calc(100vw * 0.523);
    margin: 0 auto;
    background-image: url(../images/2022/flat_banner.jpg);
    background-repeat: no-repeat;
    background-position: center;
    background-clip: border-box;
    }
}
@media screen and (min-width: 1000px) {
    .banner {
    display: block;
    width: 1000px;
    height: 524px;
    margin: 0;
    background-image: url(../images/2022/flat_banner.jpg);
    background-repeat: no-repeat;
    background-position: top;
    background-clip: border-box;
    }
}
.section {
    margin: 0;
    padding: 10px;
}
.section__header {
    margin: 0;
    padding: 1rem 0;
    font-size: 1.3rem;
    color: #bc3c8aff;
    text-align: center;
    font-weight: bolder;
}
.section__text {
    margin: 0 0 2rem;
    padding: 0;
}
.section__text--date {
    font-weight: bold;
    margin: 0 0 1rem;
    padding: 0;
}
.program-list {
    margin: 0 0 20px;
    padding: 0 0 0 20px;
}
.terms-list {
    margin: 0;
    padding: 0 0 20px 20px;
    list-style-type: decimal;
}
.sub-list {
    list-style-type: lower-latin;
}
.register {
    margin: 10px auto;
    padding: 0;
    display: flex;
    flex-flow: column;
    justify-content: center;
    align-items: center;
}
.register__text {
    font-size: 1.2rem;
    font-weight: bold;
    text-align: center;
}
.register__button, .register__button:visited, .register__button:active {
    display: flex;
    margin: 0 0 20px 0;
    padding: 5px;
    width: 150px;
    height: 50px;
    background-color: #7fc3a1ff;
    border-radius: 5px;
    align-items: center;
    justify-content: center;
    text-decoration: none;
    font-weight: bold;
    font-size: 1.2rem;
    text-align: center;
    color: #004175;
    transition: color 0.2s ease-in;
}
.register__button:hover {
    color: #0077d8;
    transition: color 0.2s ease-in;
}
.register-workshops {
    display: grid;
    row-gap: 20px;
    grid-template-columns: 1fr;
    justify-self: center;
    justify-items: center;
}
.workshops-image-background {
    width: calc(100vw - 20px);
    max-width: 1000px;
    background-color: #7fc3a1ff;
    display: flex;
    justify-content: center;
}
@media screen and (min-width: 1000px) {
    .workshops-image-background {
        width: 980px;
    }
}
.workshops-image {
    width: calc(100vw - 20px);
    max-width: 350px;
    height: auto;
}
.materials {
    height: auto;
    display: flex;
    flex-flow: column;
    justify-content: space-between;
    align-items: center;
}
.materials-text {
    margin: 0 0 10px;
}
.materials-list {
    margin: 5px 0;
}
.workshop-button, .workshop-button:visited, .workshop-button:hover, .workshop-button:active {
    background-color: #ff6600;
    margin: 10px 0 35px 0;
}
@media screen and (min-width: 800px) {
    .register-workshops {
        display: grid;
        grid-template-columns: 350px 1fr;
        column-gap: 10px;
        justify-self: center;
        justify-items: start;
        align-items: center;
    }
    .workshops-image-background {
        display: block;
        background-color: white;
    }
    .workshops-image {
        margin-bottom: 0;
    }
    .materials {
        height: 350px;
        align-items: flex-start;
    }
    .workshop-button, .workshop-button:visited, .workshop-button:hover, .workshop-button:active {
        margin: 0;
    }
}
.inactive-button {
    opacity: 0.5;
    cursor: not-allowed;
}
.sponsors__text {
    font-size: 1.2rem;
    font-weight: bold;
    text-align: center;
}
.sponsors {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
    gap: 10px;
    justify-items: center;
    padding: 0;
    margin: 10px 0 40px;
}
.sponsors__logo {
    width: 150px;
    min-height: 100px;
    display: flex;
    align-items: center;
    justify-content: center;
}
.list--manifest {
    list-style-type: decimal;
    margin: 0;
    padding: 10px 0 0 20px;
}
.link, .link:active, .link:visited {
    text-decoration: none;
    color: #03579a;
    font-weight: bold;
    transition: color 0.2s ease-in;
}
.link:hover {
    color: #49adff;
    transition: color 0.2s ease-in;
}
.contact__box {
    padding: 0;
    margin: 0 0 1rem;
    word-break: break-all;
}
.contact__item {
    display: flex;
    align-items: center;
    padding: 5px;
}
.contact__icon {
    margin: 0 10px 0 0;
}
@media screen and (max-width: 250px) {
    .longlink {
        word-break: break-all;
    }
}
.footer {
    margin: 0;
    padding: 10px;
    text-align: center;
    background-color: #7fc3a1ff;
}
.footer__text {
    margin: 0;
    padding: 0;
    font-size: 0.7rem;
}


/* Slideshow container */
.slideshow-container {
  max-width: 1000px;
  position: relative;
  margin: 5px auto;
}

/* Hide the images by default */
.mySlides {
  display: none;
}

/* Next & previous buttons */
.prev, .next {
  cursor: pointer;
  position: absolute;
  top: 50%;
  width: auto;
  margin-top: -22px;
  padding: 16px;
  color: white;
  font-weight: bold;
  font-size: 18px;
  background-color: rgba(0, 0, 0, 0.1);
  transition: 0.6s ease;
  border-radius: 0 3px 3px 0;
  user-select: none;
}

/* Position the "next button" to the right */
.next {
  right: 0;
  border-radius: 3px 0 0 3px;
}

/* On hover, add a black background color with a little bit see-through */
.prev:hover, .next:hover {
  background-color: rgba(0,0,0,0.8);
}

/* Caption text */
.text {
  color: #f2f2f2;
  font-size: 15px;
  padding: 8px 12px;
  position: absolute;
  bottom: 8px;
  width: 100%;
  text-align: center;
}

/* Number text (1/3 etc) */
.numbertext {
  color: #f2f2f2;
  font-size: 12px;
  padding: 8px 12px;
  position: absolute;
  top: 0;
}

/* The dots/bullets/indicators */
.dot {
  cursor: pointer;
  height: 15px;
  width: 15px;
  margin: 0 2px;
  background-color: #bbb;
  border-radius: 50%;
  display: inline-block;
  transition: background-color 0.6s ease;
}

.active, .dot:hover {
  background-color: #717171;
}

/* Fading animation */
.fade {
  animation-name: fade;
  animation-duration: 1.5s;
}

@keyframes fade {
  from {opacity: .4}
  to {opacity: 1}
}

iframe {
    display: block;
    margin: 5px 0;
    max-width: calc(100vw - 20px);
}

.blog-photos-container {
    max-width: 100%;
    display: flex;
    flex-flow: column;
    align-items: center;
    gap: 10px 10px;
}

.blog-photo {
    width: 450px;
    max-width: 100%;
}

